--- a/app/src/main/res/layout/fragment_doctor_set_available_dates.xml
+++ b/app/src/main/res/layout/fragment_doctor_set_available_dates.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/horizontalUp"
@@ -52,49 +53,36 @@
         app:layout_constraintTop_toTopOf="@id/arrowBack" />
 
     <TextView
+        android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="4dp"
         android:background="@drawable/thin_line"
         app:layout_constraintTop_toBottomOf="@id/newUser"
         android:layout_marginHorizontal="30dp"/>
 
-    <TextView
-        android:id="@+id/tv_selected_date"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/datesRecycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="35dp"
-        android:background="@drawable/text_box"
-        android:paddingHorizontal="10dp"
-        android:paddingVertical="9dp"
-        android:text="@string/selected_date"
-        android:fontFamily="@font/rubik_variable_font_wight"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/arrowBack" />
-
-    <CalendarView
-        android:id="@+id/calender"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_selected_date"
-        android:layout_marginTop="50dp"
-        android:theme="@style/Theme.Clinic"/>
+        android:layout_height="0dp"
+        tools:listitem="@layout/item_manage_dates"
+        app:layout_constraintTop_toBottomOf="@id/line"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="vertical" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_confirm"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Disable"
         android:textStyle="bold|italic"
         android:textSize="18sp"
         app:cornerRadius="10dp"
         android:textColor="@color/black"
-        android:background="@drawable/login_button"
-        android:layout_marginBottom="15dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_margin="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:background="@drawable/add"
+        android:layout_marginBottom="30dp"
+        android:layout_marginHorizontal="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
